# narwhal

./: .clang-format  .filter-repo-paths.txt  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  clippy.toml  crates.js  deny.toml  index.html  search-index.js  settings.html  source-files.js
config/: Cargo.toml  all.html  enum.ComitteeUpdateError.html  enum.CommitteeUpdateError.html  enum.ConfigError.html  index.html  sidebar-items.js  struct.Authority.html  struct.BlockSynchronizerParameters.html  struct.Committee.html  struct.ConsensusAPIGrpcParameters.html  struct.Parameters.html  struct.PrimaryAddresses.html  struct.PrometheusMetricsParameters.html  struct.WorkerAddresses.html  struct.WorkerCache.html  struct.WorkerIndex.html  struct.WorkerInfo.html  trait.Export.html  trait.Import.html  type.Epoch.html  type.SharedCommittee.html  type.SharedWorkerCache.html  type.Stake.html  type.WorkerId.html
config/src/: duration_format.rs  lib.rs
config/tests/: config_tests.rs
config/tests/snapshots/: config_tests__committee.snap  config_tests__parameters_import.snap  config_tests__worker_cache.snap
config/utils/: fn.get_available_port.html  index.html  sidebar-items.js
dag/: Cargo.toml  all.html  fn.bfs.html  index.html  sidebar-items.js  struct.Node.html  struct.NodeRef.html  type.WeakNodeRef.html
dag/bft/: index.html  sidebar-items.js  struct.Bft.html
dag/node_dag/: enum.DagError.html  enum.NodeDagError.html  index.html  sidebar-items.js  struct.NodeDag.html  trait.Affiliated.html
dag/src/: lib.rs  node_dag.rs
examples/: Cargo.toml  README.md
examples/doc/: docs.md
examples/protos/: narwhal.proto
examples/src/: demo_client.rs
executor/: Cargo.toml  all.html  constant.DEFAULT_CHANNEL_SIZE.html  enum.SubscriberError.html  fn.get_restored_consensus_output.html  index.html  macro.bail.html  macro.ensure.html  macro.try_fut_and_permit!.html  macro.try_fut_and_permit.html  sidebar-items.js  struct.ExecutionIndices.html  struct.Executor.html  struct.SingleExecutor.html  trait.BatchExecutionState.html  trait.ExecutionState.html  trait.ExecutionStateError.html  trait.SingleExecutionState.html  type.ExecutorOutput.html  type.SerializedTransaction.html  type.SerializedTransactionDigest.html  type.SubscriberResult.html
executor/core/: struct.SingleExecutor.html
executor/errors/: enum.SubscriberError.html  trait.ExecutionStateError.html  type.SubscriberResult.html
executor/src/: batch_loader.rs  core.rs  errors.rs  executor.rs  lib.rs  metrics.rs  notifier.rs  state.rs  subscriber.rs
executor/src/tests/: execution_state.rs  executor_tests.rs  fixtures.rs  state_tests.rs  subscriber_tests.rs
executor/state/: struct.ExecutionIndices.html
executor/tests/: consensus_integration_tests.rs
network/: Cargo.toml  all.html  constant.MAX_TASK_CONCURRENCY.html  fn.multiaddr_to_address.html  index.html  sidebar-items.js  struct.BoundedExecutor.html  struct.CancelHandler.html  struct.CancelOnDropHandler.html  struct.P2pNetwork.html  struct.PrimaryNetwork.html  struct.PrimaryToWorkerNetwork.html  struct.RetryConfig.html  struct.WorkerNetwork.html  struct.WorkerToPrimaryNetwork.html  trait.Lucky.html  trait.LuckyNetwork.html  trait.LuckyNetwork2.html  trait.ReliableNetwork.html  trait.ReliableNetwork2.html  trait.UnreliableNetwork.html  trait.UnreliableNetwork2.html  type.MessageResult.html
network/bounded_executor/: struct.BoundedExecutor.html
network/metrics/: index.html  sidebar-items.js  struct.Metrics.html  struct.PrimaryNetworkMetrics.html  struct.WorkerNetworkMetrics.html  trait.NetworkMetrics.html
network/primary/: struct.P2pNetwork.html  struct.PrimaryNetwork.html  struct.PrimaryToWorkerNetwork.html
network/retry/: struct.RetryConfig.html
network/src/: accounting_receiver.rs  bounded_executor.rs  central_accounting.rs  lib.rs  p2p.rs  primary.rs  receiver.rs  reliable_sender.rs  retry.rs  traits.rs  worker.rs
network/src/tests/: receiver_tests.rs
network/traits/: trait.Lucky.html  trait.LuckyNetwork.html  trait.LuckyNetwork2.html  trait.ReliableNetwork.html  trait.ReliableNetwork2.html  trait.UnreliableNetwork.html  trait.UnreliableNetwork2.html
network/worker/: struct.WorkerNetwork.html  struct.WorkerToPrimaryNetwork.html
storage/: Cargo.toml  all.html  index.html  sidebar-items.js  struct.CertificateStore.html  type.CertificateToken.html
storage/certificate_store/: struct.CertificateStore.html  type.CertificateToken.html
storage/src/: certificate_store.rs  lib.rs  proposer_store.rs
store/: Cargo.toml
store/src/: lib.rs  traits.rs
store/src/rocks/: iter.rs  keys.rs  mod.rs  tests.rs  values.rs
subscriber/: Cargo.toml
subscriber/src/: core.rs  lib.rs  server.rs  store.rs
test_utils/: Cargo.toml  all.html  constant.CERTIFICATES_CF.html  constant.CERTIFICATE_ID_BY_ROUND_CF.html  constant.HEADERS_CF.html  constant.PAYLOAD_CF.html  constant.VOTES_CF.html  fn.batch.html  fn.batch_digest.html  fn.batch_with_transactions.html  fn.batches.html  fn.certificate.html  fn.certificate_from_committee.html  fn.committee.html  fn.committee_from_keys.html  fn.committee_with_base_port.html  fn.digest_batch.html  fn.ensure_test_environment.html  fn.expecting_listener.html  fn.fixture_batch_with_transactions.html  fn.fixture_header.html  fn.fixture_header_builder.html  fn.fixture_header_with_payload.html  fn.fixture_headers_round.html  fn.fixture_payload.html  fn.header.html  fn.header_with_epoch.html  fn.headers.html  fn.initialize_worker_index_with_port_getter.html  fn.keys.html  fn.keys_with_len.html  fn.listener.html  fn.make_authority.html  fn.make_authority_with_port_getter.html  fn.make_certificates.html  fn.make_certificates_with_epoch.html  fn.make_consensus_store.html  fn.make_optimal_certificates.html  fn.make_optimal_signed_certificates.html  fn.make_signed_certificates.html  (+39 more)
test_utils/cluster/: fn.setup_tracing.html  index.html  sidebar-items.js  struct.AuthorityDetails.html  struct.Cluster.html  struct.NodeDetails.html  struct.PrimaryNodeDetails.html  struct.WorkerNodeDetails.html
test_utils/src/: cluster.rs  lib.rs
(+1404 files in other folders)
