[workspace]
members = ["config", "consensus", "crypto", "dag", "examples", "executor", "network", "node", "primary", "storage", "test-utils", "types", "worker", "workspace-hack"]

[profile.release]
codegen-units = 1
lto = true

[profile.bench-profiling]
inherits = "release"
# Important for performance/memory profiling
debug = true

[profile.bench]
codegen-units = 1
lto = true
