[package]
name = "config"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
edition = "2021"

[dependencies]
multiaddr = "0.14.0"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
thiserror = "1.0.32"
tracing = "0.1.36"
arc-swap = { version = "1.5.1", features = ["serde"] }

crypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "0d0d1208e7d6b91c25febec13ce3683414a7e03f", package = "fastcrypto" }

workspace-hack = { version = "0.1", path = "../workspace-hack" }
rand = "0.8.5"

[dev-dependencies]
insta = "1.17.2"
rand = "0.8.5"
tempfile = "3.3.0"
tracing-test = "0.2.3"

test_utils = { path = "../test_utils" }
