[package]
name = "dag"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
publish = false
edition = "2021"

[dependencies]
arc-swap = "1.5.1"
crypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "0d0d1208e7d6b91c25febec13ce3683414a7e03f", package = "fastcrypto" }
dashmap = "5.3.4"
either = "1.7.0"
itertools = "0.10.3"
once_cell = "1.13.1"
rayon = "1.5.3"
serde = "1.0.143"
thiserror = "1.0.32"
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
hex = "0.4.3"
proptest = "1.0.0"
proptest-derive = "0.3.0"
rayon = "1.5.3"
