[package]
name = "demo"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
publish = false
edition = "2021"

[[bin]]
name = "demo_client"
path = "src/demo_client.rs"

[dependencies]
base64 = "0.13.0"
clap = "2.34"
prost = "0.11.0"
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
tonic = "0.8.0"
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[build-dependencies]
tonic-build = "0.8.0"

[features]
benchmark = []
