[package]
name = "executor"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]

[dependencies]
async-trait = "0.1.57"
bincode = "1.3.3"
blake2 = "0.9"
bytes = "1.2.1"
futures = "0.3.21"
serde = { version = "1.0.142", features = ["derive"] }
thiserror = "1.0.31"
tokio = { version = "1.20.1", features = ["sync"] }
tokio-util = { version = "0.7.3", features = ["codec"] }
tracing = "0.1.36"
config = { path = "../config" }
consensus = { path = "../consensus" }
crypto = { path = "../crypto" }
primary = { path = "../primary" }
tonic = "0.7.2"
multiaddr = "0.14.0"

types = { path = "../types" }
worker = { path = "../worker" }

store = { git = "https://github.com/mystenlabs/mysten-infra.git", package = "typed-store", rev = "f4aa523d3029bd6a23bead5f04c182f2cfa04c5e" }
mysten-network = { git = "https://github.com/mystenlabs/mysten-infra.git", rev = "f4aa523d3029bd6a23bead5f04c182f2cfa04c5e" }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
rand = "0.7.3"
tempfile = "3.3.0"
test_utils = { path = "../test_utils" }
indexmap = { version = "1.9.1", features = ["serde"] }