[package]
name = "network"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
edition = "2021"
publish = false

[dependencies]
async-trait = "0.1.57"
backoff = { version = "0.4.0", features = ["tokio"] }
bytes = "1.2.1"
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "c022a2ae23ca7cc2778293fd3b1db42e8cd02d3b" }
futures = "0.3.23"
multiaddr = "0.14.0"
prometheus = "0.13.1"
rand = { version = "0.8.5", features = ["small_rng"] }
thiserror = "1.0.32"
tokio = { version = "1.20.1", features = ["rt", "net", "sync", "macros", "time"] }
# TODO(erwan): until upstream releases 0.7.5, with `try_remove`
# See: https://github.com/tokio-rs/tokio/pull/5052
tokio-util = { version = "0.7.3", features = ["codec", "time"], git = "https://github.com/erwanor/tokio.git", branch = "eo-dq-try-remove"}
tonic = { version = "0.7.2", features = ["tls"] }
tracing = "0.1.36"
types = { path = "../types" }

serde = "1.0.144"
mysten-network = { git = "https://github.com/mystenlabs/mysten-infra.git", rev = "696fa25982acdc87ab64ec6a33cb111edc63a331" }
workspace-hack = { version = "0.1", path = "../workspace-hack" }
eyre = "0.6.8"
# TODO(erwan): until upstream reaches 1.2.0
exponential-backoff = { version = "1.2.0", git = "https://github.com/erwanor/exponential-backoff" }

[dev-dependencies]
bincode = "1.3.3"
test_utils = { path = "../test_utils" }
