[package]
name = "store"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Alberto Sonnino <alberto@sonnino.com>"]
edition = "2018"
publish = false

[dependencies]
rocksdb = "0.17.0"
eyre = "0.6.5"
serde = "1.0"
bincode = "1.3.3"
tokio = { version = "1.5.0", features = ["sync", "macros", "rt"] }


[dev-dependencies]
tempfile = "3.2"
