[package]
name = "subscriber"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["sync", "rt", "macros"] }
tokio-util = { version = "0.7.0", features = ["codec"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_bytes = "0.11.5"
log = "0.4.14"
futures = "0.3.21"
rocksdb = "0.18.0"
bytes = "1.1.0"
async-trait = "0.1.52"
bincode = "1.3.3"
store = { git = "https://github.com/mystenlabs/mysten-infra.git", package = "typed-store", rev = "808de09203d147b43d59114b8afd9e51cbcf5778"}

crypto = { path = "../crypto" }
network = { path = "../network" }
primary = { path = "../primary" }