[package]
name = "test_utils"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
publish = false

[dependencies]
arc-swap = { version = "1.5.1", features = ["serde"] }
base64 = "0.13.0"
bincode = "1.3.3"
blake2 = "0.9"
bytes = "1.2.1"
derive_builder = "0.11.2"
futures = "0.3.23"
indexmap = { version = "1.9.1", features = ["serde"] }
itertools = "0.10.3"
multiaddr = "0.14.0"
prometheus = "0.13.1"
rand = "0.8.5"
serde = { version = "1.0.143", features = ["derive"] }
tempfile = "3.3.0"
thiserror = "1.0.32"
tokio = { version = "1.20.1", features = ["sync", "rt", "macros"] }
tokio-util = { version = "0.7.3", features = ["codec"] }
tonic = "0.7.2"
tracing = "0.1.36"

config = { path = "../config" }
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "574fb8fa17926666131b21c03cfbeb16ff9fd894", features = ["copy_key"] }
crypto = { path = "../crypto" }
executor = { path = "../executor" }
node = { path = "../node" }
primary = { path = "../primary" }
types = { path = "../types" }
worker = { path = "../worker" }
mysten-network = { git = "https://github.com/mystenlabs/mysten-infra.git", rev = "8d090689be14078f2ca41c356e7bbc0af21f73ab" }

store = { git = "https://github.com/mystenlabs/mysten-infra.git", package = "typed-store", rev = "8d090689be14078f2ca41c356e7bbc0af21f73ab" }
workspace-hack = { version = "0.1", path = "../workspace-hack" }
