[package]
name = "test_utils"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
publish = false

[dependencies]
arc-swap = { version = "1.5.1", features = ["serde"] }
base64 = "0.13.0"
bincode = "1.3.3"
blake2 = "0.9"
bytes = "1.2.1"
derive_builder = "0.11.2"
futures = "0.3.24"
indexmap = { version = "1.9.1", features = ["serde"] }
itertools = "0.10.3"
multiaddr = "0.14.0"
prometheus = "0.13.1"
rand = "0.8.5"
serde = { version = "1.0.144", features = ["derive"] }
tempfile = "3.3.0"
thiserror = "1.0.34"
tokio = { version = "1.20.1", features = ["sync", "rt", "macros"] }
tokio-util = { version = "0.7.3", features = ["codec"] }
tonic = "0.7.2"
tracing = "0.1.36"

config = { path = "../config" }
fastcrypto = { version = "0.1.1" }
crypto = { path = "../crypto" }
executor = { path = "../executor" }
node = { path = "../node" }
primary = { path = "../primary" }
network = { path = "../network" }
types = { path = "../types" }
worker = { path = "../worker" }
mysten-network = "0.1.0"

store = { version = "0.1.0", package = "typed-store"}
workspace-hack = { version = "0.1", path = "../workspace-hack" }
telemetry-subscribers = "0.1.0"

anemo = { git = "https://github.com/mystenlabs/anemo.git", rev = "6278d0fa78147a49ff2cb9dd2e45e763886be0a0" }
tower = { version = "0.4.13", features = ["full"] }
